reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__debug_reports.rs_line_334_col_5.log

*** crates/tracewake-core/src/debug_reports.rs:334:5: replace phase3a_routines_report -> Phase3ADebugReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/debug_reports.rs
+++ replace phase3a_routines_report -> Phase3ADebugReport with Default::default()
@@ -326,78 +326,17 @@
                 need.last_change_cause().stable_id()
             ));
         }
     }
     phase3a_report("debug.phase3a.needs", "Needs", rows, Vec::new(), Vec::new())
 }
 
 pub fn phase3a_routines_report(agent_state: &AgentState) -> Phase3ADebugReport {
-    let mut rows = vec![
-        format!("intention_count={}", agent_state.intentions.len()),
-        format!(
-            "active_intention_count={}",
-            agent_state.active_intention_by_actor.len()
-        ),
-        format!("routine_count={}", agent_state.routine_executions.len()),
-    ];
-    rows.extend(
-        agent_state
-            .active_intention_by_actor
-            .iter()
-            .map(|(actor_id, intention_id)| {
-                format!(
-                    "active actor={} intention={}",
-                    actor_id.as_str(),
-                    intention_id.as_str()
-                )
-            }),
-    );
-    rows.extend(agent_state.intentions.values().map(|intention| {
-        format!(
-            "intention={} actor={} status={:?} goal={} method={} step={}",
-            intention.intention_id.as_str(),
-            intention.actor_id.as_str(),
-            intention.status,
-            intention.selected_goal_id.as_str(),
-            intention
-                .selected_routine_method
-                .as_ref()
-                .map(|id| id.as_str())
-                .unwrap_or("none"),
-            intention.current_step.as_deref().unwrap_or("none")
-        )
-    }));
-    rows.extend(agent_state.routine_executions.values().map(|execution| {
-        format!(
-            "routine={} actor={} template={} family={} step_index={} status={:?} next_tick={} deadline={} fallback_attempts={}",
-            execution.execution_id.as_str(),
-            execution.actor_id.as_str(),
-            execution.template_id.as_str(),
-            execution.family.stable_id(),
-            execution.current_step_index,
-            execution.step_status,
-            execution
-                .expected_next_progress_tick
-                .map(|tick| tick.value().to_string())
-                .unwrap_or_else(|| "none".to_string()),
-            execution
-                .deadline_tick
-                .map(|tick| tick.value().to_string())
-                .unwrap_or_else(|| "none".to_string()),
-            execution.fallback_attempts
-        )
-    }));
-    phase3a_report(
-        "debug.phase3a.routines",
-        "Routines",
-        rows,
-        Vec::new(),
-        Vec::new(),
-    )
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn phase3a_actor_report(agent_state: &AgentState, actor_id: &ActorId) -> Phase3ADebugReport {
     let mut rows = vec![format!("actor={}", actor_id.as_str())];
     if let Some(needs) = agent_state.needs_by_actor.get(actor_id) {
         rows.extend(needs.values().map(|need| {
             format!(
                 "need={} value={} band={}",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `Phase3ADebugReport: Default` is not satisfied
   --> crates/tracewake-core/src/debug_reports.rs:334:5
    |
334 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `Phase3ADebugReport`
   --> crates/tracewake-core/src/debug_reports.rs:83:1
    |
 83 | pub struct Phase3ADebugReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `debug_reports::Phase3ADebugReport: Default` is not satisfied
   --> crates/tracewake-core/src/debug_reports.rs:334:5
    |
334 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `debug_reports::Phase3ADebugReport`
   --> crates/tracewake-core/src/debug_reports.rs:83:1
    |
 83 | pub struct Phase3ADebugReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
